--- a/package.json
+++ b/package.json
@@ -5,16 +5,31 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js --trace-warnings --unhandled-rejections=strict",
-    "start": "node src/index.js"
+    "dev": "ts-node-dev ./src/server.ts",
+    "start": "node ./src/index.js"
   },
   "author": "Fitred Name",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^12.5.1"
+    "@discordjs/opus": "^0.6.0",
+    "@types/node": "^16.10.2",
+    "discord.js": "^12.5.1",
+    "distube": "^2.8.18",
+    "dotenv": "^10.0.0",
+    "ffmpeg-static": "^4.4.0",
+    "install": "^0.13.0",
+    "typescript": "^4.4.3"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.0.1",
+    "eslint": "^7.12.1",
+    "eslint-config-standard-with-typescript": "^21.0.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.0.0",
     "git-commit-msg-linter": "3.2.8",
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.13",
+    "ts-node": "^10.2.1",
+    "ts-node-dev": "^1.1.8"
   }
 }
