--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "^0.6.0",
+    "@types/express": "^4.17.13",
     "@types/node": "^16.10.2",
     "discord.js": "^12.5.1",
     "distube": "^2.8.18",
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "ffmpeg-static": "^4.4.0",
     "install": "^0.13.0",
     "typescript": "^4.4.3"
